--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
    <img src="img/elcafe.jpg" alt="El Café" width="150px" height="120px"></p>
 
    <p class="contacto"><a href="contacto.html" style="color: brown;">Contacto</a>
-    <img src="img/contacto.jpg" alt="Contacto" width="150px" height="120px"></p>
+    <img src="http://site.net/images/contacto.jpg" alt="Contacto" width="150px" height="120px"></p>
 
 
   
